# krillion

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  a.funn++  a.kr  build.rs  crash_stack.txt  error.funn++  escape.funn++  functions.funn++  gc_test  gc_test.c  l  rustc-ice-2024-03-13T10_10_14-7248.txt  rustc-ice-2024-03-13T10_10_31-7337.txt  rustc-ice-2024-03-13T10_11_02-7444.txt  rustc-ice-2024-03-13T10_11_09-7487.txt  rustc-ice-2024-03-13T10_11_12-7518.txt  rustc-ice-2024-03-13T10_12_09-7772.txt  rustc-ice-2024-03-13T10_12_14-7811.txt  rustc-ice-2024-03-13T10_12_23-7854.txt  rustc-ice-2024-03-13T10_14_49-8846.txt  rustc-ice-2024-03-13T10_15_11-8878.txt  rustc-ice-2024-03-13T10_26_38-10709.txt  rustfmt.toml  test.funn++  unicode.funn++
.github/ISSUE_TEMPLATE/: panic-report.md
krillion-proc/: Cargo.toml
krillion-proc/src/: lib.rs  parser_fn.rs
src/: args.rs  crash.rs  main.rs  panic.rs
src/compiler/: buffer.rs  error.rs  highlight.rs  lexer.rs  mod.rs  preprocess.rs  tests.rs  util.rs
src/compiler/ast/: ast.rs  mod.rs  node.rs  parser.rs
src/compiler/backend/llvm/: mod.rs  wrapper.rs
src/compiler/error/: kinds.rs  mod.rs
src/compiler/frontend/: buffer.rs  error.rs  highlight.rs  lexer.rs  mod.rs  preprocess.rs
src/compiler/frontend/ast/: mod.rs  node.rs  numerator.rs  parser.rs  typecheck.rs
src/compiler/frontend/ast/parser/: exprs.rs  mod.rs  nodes.rs  types.rs
tests/: test.funn++  trello-09gjg5QN.funn++  trello-C7lAjlq5.kr  trello-qDPeEIBj.funn++
