[package]
name = "krillion"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
logos = "0.13.0"
clap = { path = "clap", features = ["derive"] }
krillion-proc = { path = "krillion-proc" }
unicode-width = "0.1.11"
backtrace = "0.3.69"

[profile.release]
strip = true
lto = true

[profile.fast]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
strip = true
