[package]
name = "krillion"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0" # 5 most recent versions

[features]
default = ["unstable"]
unstable = []

[dependencies]
logos = "0.13.0"
clap = { path = "clap", features = ["derive"] }
unicode-width = "0.1.11"
backtrace = "0.3.69"
panic-message = "0.3.0"

[profile.release]
strip = true
lto = true

[profile.fast]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
strip = true
