[package]
name = "krillion"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0" # 10 most recent versions

[dependencies]
logos = "0.13.0"
clap = { path = "clap", features = ["derive"] }
unicode-width = "0.1.11"
backtrace = "0.3.69"
panic-message = "0.3.0"
llvm-sys = { version = "170", features = ["prefer-dynamic"] }

[profile.release]
strip = true
lto = true

[profile.fast]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
strip = true
